Fix navbar on homepage in iphone5
The instagram logo was overlapping a little

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -49,6 +49,10 @@ body {
         @include media-query(940px) {
             clear: both;
         }
+
+        @include media-query(320px) {
+            max-width: 280px;
+        }
     }
 
     .navbar-item {
